finalised nav-bar

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         <div class="first-section">
           <!-- first-section-first-div -->
           <div class="first-section-div">
-            <img class="logo"
+            <img
+              class="logo"
               src="pictures/Logo- light 1.svg
             "
               alt=""
@@ -47,21 +48,21 @@
       </div>
     </nav>
     <!-- first section div -->
-     <section id="section-one">
-        <div id="title-div">
-    
+    <section id="section-one">
+      <div id="title-div">
+        <div class="main-tile">
         </div>
         <!-- the-second-section div -->
-        <div class="watch">
-            <button class="watch-button">
-                <img src="pictures/Logo- light 1.svg" alt="">
-                <p>watch movies</p>
-            </button>
-            <button class="more-info-button">
-                more info 
-            </button>
-        </div>
-     </section>
-     <script src="index.js"></script>
+      <div class="watch">
+        <button class="watch-button">
+          <img src="pictures/Logo- light 1.svg" alt="" />
+          <p>watch movies</p>
+        </button>
+        <button class="more-info-button">more info</button>
+      </div>
+      </div>
+      
+    </section>
+    <script src="index.js"></script>
   </body>
 </html>
