responsive nav completion

--- a/index.html
+++ b/index.html
@@ -16,50 +16,51 @@
     <!-- nav-bar -->
     <nav>
       <!-- overall-div -->
-      <div id="overall-div">
+      <section id="overall-div">
         <!-- first-nav-div -->
         <div class="first-section">
           <!-- first-section-first-div -->
-          <div class="first-section-div">
+          <figure class="first-section-div">
             <img
               class="logo"
               src="pictures/Logo- light 1.svg
             "
               alt=""
             />
-          </div>
-          <!-- first-section-second-div -->
-          <div class="first-section-second-div">
-            <h2 id="homepage">home</h2>
-            <h2 id="pricing">pricing</h2>
-            <h2 id="movies">movies</h2>
-            <h2 id="series">series</h2>
-            <h2 id="collection">collection</h2>
-            <h2 id="faq">FAQ</h2>
-          </div>
+          </figure>
+          <!-- first-section-second-ul-->
+          <ul class="first-section-second-div">
+            <li id="homepage">home</li>
+            <li id="pricing">pricing</li>
+            <li id="movies">movies</li>
+            <li id="series">series</li>
+            <li id="collection">collection</li>
+            <li id="faq">FAQ</li>
+          </ul>
         </div>
         <!-- second-nav-div -->
-        <div class="second-section">
-          <img src="pictures/search-interaction.svg" alt="" />
-          <img src="pictures/Bell-notif interaction.svg" alt="" />
-          <img src="pictures//log in - interaction.png" alt="" />
-          <img src="pictures/sun.png" alt="" />
-        </div>
-      </div>
+        <figrue class="second-section">
+          <img class="search-icon" src="pictures/search-interaction.svg" alt="" />
+          <img class="notification-icon" src="pictures/Bell-notif interaction.svg" alt="" />
+          <img class="log-icon" src="pictures//log in - interaction.png" alt="" />
+          <img class="sun-icon" src="pictures/sun.png" alt="" />
+          <img class="list-icon" src="pictures/list-bullet.svg" alt="">
+        </figure>
+      </section>
     </nav>
     <!-- first section div -->
-    <section id="section-one">
+    <aside id="section-one">
       <div id="title-div">
         <div class="main-tile">
-        </div>
+        </aside>
         <!-- the-second-section div -->
-      <div class="watch">
+      <section class="watch">
         <button class="watch-button">
           <img src="pictures/Logo- light 1.svg" alt="" />
           <p>watch movies</p>
         </button>
         <button class="more-info-button">more info</button>
-      </div>
+      </section>
       </div>
       
     </section>
