trending movies set up

--- a/index.html
+++ b/index.html
@@ -64,6 +64,32 @@
       </div>
       
     </section>
+
+
+
+    <!-- second-section -->
+     <section id="second-section">
+      <!-- second-section-first-section -->
+      <section id="trends-text">
+        <h2 id="movies">
+        Trends
+        </h2>
+       <a href="trend.html"> <button id="see-more">see more</button></a>
+      </section>
+      <!-- second-section-second-div -->
+      <section id="genres">
+        <!-- genres-section-one -->
+         <section id="genre-one"></section>
+         <!-- genres-section-two -->
+         <section id="genre-two">
+          <!-- <div id="card">
+            <img src="" alt="" id="card-image">
+          </div> -->
+         </section>
+      </section>
+     </section>
+
+    
     <script src="index.js"></script>
   </body>
 </html>
