--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
          
         </div>
         <section id="collection-genre"></section>
+        <section id="collection-genres"></section>
        </section>
     <script src="index.js"></script>
   </body>
