--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <figure class="first-section-div">
             <img
               class="logo"
-              src="pictures/Logo- light 1.svg
+              src="images/logo.svg
             "
               alt=""
             />
@@ -41,23 +41,24 @@
         </div>
         <!-- second-nav-div -->
         <figrue class="second-section">
-          <img class="search-icon" src="pictures/search-interaction.svg" alt="" />
-          <img class="notification-icon" src="pictures/Bell-notif interaction.svg" alt="" />
-          <img class="log-icon" src="pictures//log in - interaction.png" alt="" />
-          <img class="sun-icon" src="pictures/sun.png" alt="" />
-          <img class="list-icon" src="pictures/list-bullet.svg" alt="">
+          <img class="search-icon" src="images/search-icon.svg" alt="" />
+          <img class="notification-icon" src="images/notification-bell.svg" alt="" />
+          <img class="log-icon" src="images/profile.png" alt="" />
+          <img class="sun-icon" src="images/sun.png" alt="" />
+          <img class="list-icon" src="image/menu-bar.svg" alt="">
         </figure>
       </section>
     </nav>
     <!-- first section div -->
     <aside id="section-one">
       <div id="title-div">
-        <div class="main-tile">
+        <div class="main-tile"></div>
+          </div>
         </aside>
         <!-- the-second-section div -->
       <section class="watch">
         <button class="watch-button">
-          <img src="pictures/Logo- light 1.svg" alt="" />
+          <img src="images/logo.svg" alt="" />
           <p>watch movies</p>
         </button>
         <button class="more-info-button">more info</button>
@@ -65,8 +66,6 @@
       </div>
       
     </section>
-
-
 
     <!-- second-section -->
      <section id="second-section">
@@ -106,8 +105,8 @@
       </section>
 <!-- FOURTH SECTION -->
  <section id="fourth-section">
-  <img src="pictures/image 200.png" id="golden-image" alt="">
-  <img src="pictures/image 201.png" alt="" id="image-png">
+  <img src="images/golden-globe.png" id="golden-image" alt="">
+  <img src="images/blue-board.png" alt="" id="image-png">
  </section>
     <!-- FIFTH SECTION -->
      <section id="section-five">
@@ -131,7 +130,7 @@
       <section id="price">
         <!-- PRICE ONE -->
         <div id="group28div">
-           <img src="pictures/Group 28.png" alt="" id="group28">
+           <img src="images/white-board.png" alt="" id="group28">
            <h2 id="basic">Basic</h2>
            <p id="months">3months</p>
            <h2 id="price-tag">$15.140</h2>
@@ -142,7 +141,7 @@
         </div>
        <!-- SUGGESTED -->
         <div id="sugessted">
-          <img src="pictures/Subtract.svg" alt="" class="sugessted">
+          <img src="images/colored-board.svg" alt="" class="sugessted">
           <h2 class="suggestion">
             suggested
           </h2>
@@ -156,7 +155,7 @@
         </div>
         <!-- PREMIUM -->
          <div id="premium">
-          <img src="pictures/Group 28.png" alt="" id="group28">
+          <img src="images/white-board.png" alt="" id="group28">
           <h2 id="premium-text">premium</h2>
           <p id="month12">12 months</p>
           <h2 id="premium-price">$35.199</h2>
@@ -182,6 +181,7 @@
         <section id="collection-genre"></section>
         <section id="collection-genres"></section>
        </section>
+      div#section-one
     <script src="index.js"></script>
   </body>
 </html>
