finished working on the github problems

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <img class="notification-icon" src="images/notification-bell.svg" alt="" />
           <img class="log-icon" src="images/profile.png" alt="" />
           <img class="sun-icon" src="images/sun.png" alt="" />
-          <img class="list-icon" src="image/menu-bar.svg" alt="">
+          <img class="list-icon" src="images/menu-bar.svg" alt="">
         </figure>
       </section>
     </nav>
