--- a/index.html
+++ b/index.html
@@ -181,7 +181,18 @@
         <section id="collection-genre"></section>
         <section id="collection-genres"></section>
        </section>
-      div#section-one
+      <!-- CONTINUE WATCHING SECTION -->
+       <section id="continue-watching">
+        <!-- CONTINUE WATCHING FIRST SECTION -->
+        <section id="continue-watching-texts">
+          <h2 id="continue-watching-header">continue-watching</h2>
+          <a href="watch.html"><button id="continue-watching-button">see more</button></a>
+        </section>
+        <!-- CONTINUE WATCHING SECOND SECTION -->
+        <section id="continue-watching-main">
+          
+        </section>
+       </section>
     <script src="index.js"></script>
   </body>
 </html>
